test/negative/feature_octalandhexliterals.java

public class feature_octalandhexliterals {
  public feature_octalandhexliterals() {}
  protected int x = 0xCAFE;
  protected int y = 0372;
}

